# sigma-backend-universe

./: README.md
food-delivery-stream/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.observability.yaml  docker-compose.yaml  pyproject.toml
food-delivery-stream/.github/workflows/: ci.yaml
food-delivery-stream/migrations/: env.py
food-delivery-stream/migrations/versions/: 19c90226c5b9_add_optimistic_locking_to_orders.py  470169677bde_add_table_schemas.py  9c1b761097fa_initial_schema.py  e25e08307c91_add_idempotency_column_into_order_table.py  f20bd08f6f63_add_modified_order_item_table.py
food-delivery-stream/observability/fluent-bit/: fluent-bit.conf  parsers.conf
food-delivery-stream/src/app/: main.py
food-delivery-stream/src/app/api/middleware/: logging.py
food-delivery-stream/src/app/api/v1/: router.py
food-delivery-stream/src/app/core/: config.py  lifespan.py  tracing.py
food-delivery-stream/src/app/core/lifecycle/: database_lifecycle.py  kafka_lifecycle.py  redis_lifecycle.py
food-delivery-stream/src/app/core/settings/: base.py  cors.py  db.py  kafka.py  metadata.py  otel.py  redis.py
food-delivery-stream/src/app/dependencies/: orders.py
food-delivery-stream/src/app/exceptions/: base_exceptions.py  handler.py
food-delivery-stream/src/app/exceptions/orders/: order_assignment_exceptions.py  order_creation_exceptions.py
food-delivery-stream/src/app/infrastructure/database/: __init__.py  base.py  engine.py  session.py
food-delivery-stream/src/app/infrastructure/kafka/: __init__.py  consumer.py  producer.py
food-delivery-stream/src/app/infrastructure/redis/: redis.py
food-delivery-stream/src/app/models/: __init__.py
food-delivery-stream/src/app/models/orders/: __init__.py  order.py  (+4 more)
food-delivery-stream/src/app/repositories/: base.py
food-delivery-stream/src/app/schemas/: __init__.py
food-delivery-stream/src/shared/logger/: __init__.py  context.py  interface.py  log_level.py
(+8 files in other folders)
