[project]
name = "food-delivery-stream"
version = "0.1.0"
description = "Welcome to food delivery stream microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "better-exceptions>=0.3.3",
    "colorama>=0.4.6",
    "confluent-kafka>=2.13.2",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "asgi-lifespan>=2.1.0",
]

# black formatter related configuration

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

# ruff related configuration

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
]
ignore = ["E501"]  # line too long handled by black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# mypy related configuration

[tool.mypy]
python_version = "3.11"
strict = true

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

ignore_missing_imports = true


# bandit related configuration

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

#pytest setup

[tool.pytest.ini_options]
pythonpath = ["."]
